--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 and fights alongside Tanjiro.
                             </div>
                             <div class="buttons row column-gap-2 ms-0">
-                                <button class="btn btn-primary col-3">SEE MORE</button>
-                                <button class="btn btn-primary col-3">WATCH</button>
+                                <button class="btn btn-primary col-md-3 col-4">SEE MORE</button>
+                                <button class="btn btn-primary col-md-3 col-4">WATCH</button>
                             </div>
                         </div>
                     </div>
@@ -110,8 +110,8 @@
                                 bravely to protect others.
                             </div>
                             <div class="buttons row column-gap-2 ms-0">
-                                <button class="btn btn-primary col-3">SEE MORE</button>
-                                <button class="btn btn-primary col-3">WATCH</button>
+                                <button class="btn btn-primary col-md-3 col-4">SEE MORE</button>
+                                <button class="btn btn-primary col-md-3 col-4">WATCH</button>
                             </div>
                         </div>
                     </div>
@@ -130,8 +130,8 @@
                                 friends, even if he hides it.
                             </div>
                             <div class="buttons row column-gap-2 ms-0">
-                                <button class="btn btn-primary col-3">SEE MORE</button>
-                                <button class="btn btn-primary col-3">WATCH</button>
+                                <button class="btn btn-primary col-md-3 col-4">SEE MORE</button>
+                                <button class="btn btn-primary col-md-3 col-4">WATCH</button>
                             </div>
                         </div>
                     </div>
